--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="rocket">
             <img src="rocket.png" alt="">
         </div>
-    </div>
-
+    </div> -->
+<!-- 
     <div class="div1"></div>
     <div class="div2"></div> -->
-<div class="container">
+<!-- <div class="container">
     <div class="adbox">
         <img class="icon" src="cat.jpeg" alt="" width="100px" height="100px">
         <p class="adtext">Если у вас возникли вопросы по этому коду, звоните мне по этому телефону
@@ -28,6 +28,15 @@
         </p>
     
     </div>
-    <p class="link">Обратная связь</p>
+    <p class="link">Обратная связь</p> -->
+<!-- <div class="card">
+    Lorem ipsum dolor sit amet, consectetur
+     adipisicing elit. Numquam, aut!
+</div> -->
+
+<div class="box">
+    <div class="box2"></div>
+</div>
+
 </div>
 </html>
